--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.mass</groupId>
     <artifactId>spark-retrieval</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <modules>
         <module>sparkdl</module>
@@ -71,7 +71,7 @@
 
         <dependency>
             <groupId>com.thesamet.scalapb</groupId>
-            <artifactId>scalapb-runtime_2.12</artifactId>
+            <artifactId>scalapb-runtime_${scala.version}</artifactId>
             <version>0.10.11</version>
             <exclusions>
                 <exclusion>
@@ -89,7 +89,7 @@
 
         <dependency>
             <groupId>org.scalanlp</groupId>
-            <artifactId>breeze_2.12</artifactId>
+            <artifactId>breeze_${scala.version}</artifactId>
             <version>1.2</version>
         </dependency>
 
