--- a/tdm/pom.xml
+++ b/tdm/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>spark-retrieval</artifactId>
         <groupId>com.mass</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
 
     <artifactId>tdm</artifactId>
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>com.mass</groupId>
             <artifactId>sparkdl</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
         </dependency>
     </dependencies>
 
