--- a/sparkdl/pom.xml
+++ b/sparkdl/pom.xml
@@ -18,6 +18,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.scalaz</groupId>
+            <artifactId>scalaz-core_2.12</artifactId>
+            <version>7.3.2</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.intel.analytics.bigdl.core.native.mkl</groupId>
             <artifactId>mkl-java-x86_64-linux</artifactId>
             <version>0.12.1</version>
