--- a/configs/tdm_dist.conf
+++ b/configs/tdm_dist.conf
@@ -21,6 +21,8 @@ init.tree_protobuf_path             hdfs://hadoop:9000/user/hadoop/tree_pb_data.
 init.user_consumed_path             hdfs://hadoop:9000/user/hadoop/user_consumed.txt
 
 # -------- train model configs ---------
+model.deep_model                    DIN
+model.padding_index                 -1
 model.train_path                    hdfs://hadoop:9000/user/hadoop/train_data.csv
 model.eval_path                     hdfs://hadoop:9000/user/hadoop/eval_data.csv
 model.tree_protobuf_path            hdfs://hadoop:9000/user/hadoop/tree_pb_data.txt
