--- a/configs/tdm_local.conf
+++ b/configs/tdm_local.conf
@@ -12,6 +12,8 @@ init.tree_protobuf_path             Spark-Retrieval/data/tree_pb_data.txt
 init.user_consumed_path             Spark-Retrieval/data/user_consumed.txt
 
 # ------ train model configs -------
+model.deep_model                    DIN
+model.padding_index                 -1
 model.train_path                    Spark-Retrieval/data/train_data.csv
 model.eval_path                     Spark-Retrieval/data/eval_data.csv
 model.tree_protobuf_path            Spark-Retrieval/data/tree_pb_data.txt
