--- a/pom.xml
+++ b/pom.xml
@@ -14,16 +14,17 @@
         <module>tdm</module>
         <module>examples</module>
         <module>jtm</module>
+        <module>deep-retrieval</module>
     </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
         <scala.version>2.12</scala.version>
         <spark.version>2.4.5</spark.version>
         <protobuf.version>3.5.1</protobuf.version>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
     <dependencies>
