--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,9 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>11</java.version>
-        <scala.version>2.12</scala.version>
-        <spark.version>2.4.5</spark.version>
+        <scala.major.version>2.13</scala.major.version>
+        <scala.version>2.13.6</scala.version>
+        <spark.version>3.2.0</spark.version>
         <protobuf.version>3.5.1</protobuf.version>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
@@ -29,22 +30,33 @@
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-compiler</artifactId>
+            <version>${scala.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-reflect</artifactId>
+            <version>${scala.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>${scala.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_2.12</artifactId>
+            <artifactId>scalatest_${scala.major.version}</artifactId>
             <version>3.2.9</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_${scala.version}</artifactId>
+            <artifactId>spark-core_${scala.major.version}</artifactId>
             <version>${spark.version}</version>
             <exclusions>
                 <exclusion>
@@ -56,7 +68,7 @@
 
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-sql_${scala.version}</artifactId>
+            <artifactId>spark-sql_${scala.major.version}</artifactId>
             <version>${spark.version}</version>
             <exclusions>
                 <exclusion>
@@ -68,7 +80,7 @@
 
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-mllib_${scala.version}</artifactId>
+            <artifactId>spark-mllib_${scala.major.version}</artifactId>
             <version>${spark.version}</version>
         </dependency>
 
@@ -80,7 +92,7 @@
 
         <dependency>
             <groupId>com.thesamet.scalapb</groupId>
-            <artifactId>scalapb-runtime_${scala.version}</artifactId>
+            <artifactId>scalapb-runtime_${scala.major.version}</artifactId>
             <version>0.10.11</version>
             <exclusions>
                 <exclusion>
@@ -98,13 +110,13 @@
 
         <dependency>
             <groupId>org.scalanlp</groupId>
-            <artifactId>breeze_${scala.version}</artifactId>
+            <artifactId>breeze_${scala.major.version}</artifactId>
             <version>1.2</version>
         </dependency>
 
         <dependency>
             <groupId>org.typelevel</groupId>
-            <artifactId>spire_2.12</artifactId>
+            <artifactId>spire_${scala.major.version}</artifactId>
             <version>0.17.0</version>
         </dependency>
 
@@ -117,8 +129,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
                 </configuration>
             </plugin>
 
@@ -144,7 +156,7 @@
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
-                <version>4.2.4</version>
+                <version>4.5.6</version>
                 <executions>
                     <execution>
                         <id>scala-compile-first</id>
@@ -162,7 +174,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <scalaVersion>${scala.version}</scalaVersion>
+                    <scalaVersion>${scala.major.version}</scalaVersion>
                 </configuration>
             </plugin>
 
