--- a/configs/tdm_dist.conf
+++ b/configs/tdm_dist.conf
@@ -26,13 +26,14 @@ model.padding_index                 -1
 model.train_path                    hdfs://hadoop:9000/user/hadoop/train_data.csv
 model.eval_path                     hdfs://hadoop:9000/user/hadoop/eval_data.csv
 model.tree_protobuf_path            hdfs://hadoop:9000/user/hadoop/tree_pb_data.txt
-model.evaluate_during_training      true
+model.user_consumed_path            hdfs://hadoop:9000/user/hadoop/user_consumed.txt
+model.evaluate_during_training      false
 model.thread_number                 0
-model.total_batch_size              32768
-model.total_eval_batch_size         32768
+model.total_batch_size              8192
+model.total_eval_batch_size         8192
 model.seq_len                       10
 model.layer_negative_counts         0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,17,19,22,25,30,76,200
-model.sample_with_probability       true
+model.sample_with_probability       false
 model.start_sample_layer            -1
 model.sample_tolerance              20
 model.parallel_sample               true
