--- a/configs/tdm_local.conf
+++ b/configs/tdm_local.conf
@@ -17,13 +17,14 @@ model.padding_index                 -1
 model.train_path                    Spark-Retrieval/data/train_data.csv
 model.eval_path                     Spark-Retrieval/data/eval_data.csv
 model.tree_protobuf_path            Spark-Retrieval/data/tree_pb_data.txt
+model.user_consumed_path            Spark-Retrieval/data/user_consumed.txt
 model.evaluate_during_training      true
 model.thread_number                 0
-model.total_batch_size              32768
-model.total_eval_batch_size         32768
+model.total_batch_size              8192
+model.total_eval_batch_size         8192
 model.seq_len                       10
 model.layer_negative_counts         0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,17,19,22,25,30,76,200
-model.sample_with_probability       true
+model.sample_with_probability       false
 model.start_sample_layer            -1
 model.sample_tolerance              20
 model.parallel_sample               true
