--- a/tdm/pom.xml
+++ b/tdm/pom.xml
@@ -26,19 +26,22 @@
         <dependency>
             <groupId>org.bytedeco</groupId>
             <artifactId>javacpp</artifactId>
-            <version>1.5.6</version>
+            <version>1.5.4</version>
+            <classifier>linux-x86_64</classifier>
         </dependency>
 
         <dependency>
             <groupId>org.bytedeco</groupId>
             <artifactId>openblas</artifactId>
-            <version>0.3.17-1.5.6</version>
+            <version>0.3.10-1.5.4</version>
+            <classifier>linux-x86_64</classifier>
         </dependency>
 
         <dependency>
             <groupId>org.bytedeco</groupId>
             <artifactId>arpack-ng</artifactId>
-            <version>3.8.0-1.5.6</version>
+            <version>3.7.0-1.5.4</version>
+            <classifier>linux-x86_64</classifier>
         </dependency>
 
         <dependency>
