--- a/configs/deep-retrieval.conf
+++ b/configs/deep-retrieval.conf
@@ -1,7 +1,7 @@
 # ------ train model configs -------
-model.data_path                     dismember/data/example_data.csv
-model.model_path                    dismember/data/dr_model.bin
-model.mapping_path                  dismember/data/dr_mapping.txt
+model.data_path                     data/example_data.csv
+model.model_path                    data/dr_model.bin
+model.mapping_path                  data/dr_mapping.txt
 model.thread_number                 8
 model.train_batch_size              8192
 model.eval_batch_size               8192
@@ -10,7 +10,7 @@ model.num_node                      100
 model.num_path_per_item             2
 model.embed_size                    16
 model.learning_rate                 3e-3
-model.epoch_num                     1
+model.epoch_num                     5
 model.num_sampled                   1
 model.topk_number                   10
 model.beam_size                     20
@@ -21,9 +21,9 @@ model.split_ratio                   0.8
 model.initialize_mapping            true
 
 # ------ coordinate descent configs -------
-cd.data_path                        dismember/data/data.csv
-cd.model_path                       dismember/data/dr_model.bin
-cd.mapping_path                     dismember/data/dr_mapping.txt
+cd.data_path                        data/data.csv
+cd.model_path                       data/dr_model.bin
+cd.mapping_path                     data/dr_mapping.txt
 cd.thread_number                    8
 cd.train_batch_size                 8192
 cd.eval_batch_size                  8192
