--- a/configs/otm.conf
+++ b/configs/otm.conf
@@ -1,13 +1,13 @@
 # ------ train model configs -------
-model.data_path                     dismember/data/example_data.csv
-model.model_path                    dismember/data/otm_model.bin
+model.data_path                     data/example_data.csv
+model.model_path                    data/otm_model.bin
 model.deep_model                    DIN
 model.thread_number                 8
 model.train_batch_size              8192
 model.eval_batch_size               8192
 model.embed_size                    16
 model.learning_rate                 3e-3
-model.epoch_num                     1
+model.epoch_num                     5
 model.topk_number                   10
 model.beam_size                     20
 model.show_progress_interval        200
@@ -16,15 +16,15 @@ model.min_seq_len                   2
 model.split_ratio                   0.8
 model.leaf_init_mode                random
 model.initialize_mapping            true
-model.mapping_path                  dismember/data/otm_mapping.txt
+model.mapping_path                  data/otm_mapping.txt
 model.label_num                     5
 model.target_mode                   pseudo
 model.seed                          42
 
 # ------ tree construction configs -------
-tree.data_path                      dismember/data/example_data.csv
-tree.model_path                     dismember/data/otm_model.bin
-tree.mapping_path                   dismember/data/otm_mapping.txt
+tree.data_path                      data/example_data.csv
+tree.model_path                     data/otm_model.bin
+tree.mapping_path                   data/otm_mapping.txt
 tree.deep_model                     DIN
 tree.gap                            2
 tree.label_num                      5
