--- a/configs/tdm.conf
+++ b/configs/tdm.conf
@@ -3,20 +3,20 @@ init.seq_len                        10
 init.min_seq_len                    2
 init.split_for_eval                 true
 init.split_ratio                    0.8
-init.data_path                      dismember/data/example_data.csv
-init.train_path                     dismember/data/train_data.csv
-init.eval_path                      dismember/data/eval_data.csv
-init.stat_path                      dismember/data/stat_data.txt
-init.leaf_id_path                   dismember/data/leaf_id_data.txt
-init.tree_protobuf_path             dismember/data/tdm_tree.bin
-init.user_consumed_path             dismember/data/user_consumed.txt
+init.data_path                      data/example_data.csv
+init.train_path                     data/train_data.csv
+init.eval_path                      data/eval_data.csv
+init.stat_path                      data/stat_data.txt
+init.leaf_id_path                   data/leaf_id_data.txt
+init.tree_protobuf_path             data/tdm_tree.bin
+init.user_consumed_path             data/user_consumed.txt
 
 # ------ train model configs -------
 model.deep_model                    DIN
-model.train_path                    dismember/data/train_data.csv
-model.eval_path                     dismember/data/eval_data.csv
-model.tree_protobuf_path            dismember/data/tdm_tree.bin
-model.user_consumed_path            dismember/data/user_consumed.txt
+model.train_path                    data/train_data.csv
+model.eval_path                     data/eval_data.csv
+model.tree_protobuf_path            data/tdm_tree.bin
+model.user_consumed_path            data/user_consumed.txt
 model.evaluate_during_training      true
 model.thread_number                 0
 model.total_batch_size              8192
@@ -29,16 +29,16 @@ model.sample_tolerance              20
 model.parallel_sample               true
 model.embed_size                    16
 model.learning_rate                 1e-4
-model.iteration_number              100
-model.show_progress_interval        10
+model.iteration_number              2000
+model.show_progress_interval        100
 model.topk_number                   10
 model.beam_size                     20
-model.model_path                    dismember/data/tdm_model.bin
-model.embed_path                    dismember/data/embed.csv
+model.model_path                    data/tdm_model.bin
+model.embed_path                    data/embed.csv
 
 # ------ cluster tree configs -------
-cluster.embed_path                  dismember/data/embed.csv
-cluster.tree_protobuf_path          dismember/data/tdm_tree.bin
+cluster.embed_path                  data/embed.csv
+cluster.tree_protobuf_path          data/tdm_tree.bin
 cluster.cluster_type                spectral
 cluster.cluster_iter                10
 cluster.parallel                    false
