[examples] use `decline` as command line tool

--- a/configs/deep-retrieval.conf
+++ b/configs/deep-retrieval.conf
@@ -2,7 +2,7 @@
 model.data_path                     data/example_data.csv
 model.model_path                    data/dr_model.bin
 model.mapping_path                  data/dr_mapping.txt
-model.thread_number                 8
+model.thread_number                 0
 model.train_batch_size              8192
 model.eval_batch_size               8192
 model.num_layer                     3
@@ -21,10 +21,10 @@ model.split_ratio                   0.8
 model.initialize_mapping            true
 
 # ------ coordinate descent configs -------
-cd.data_path                        data/data.csv
+cd.data_path                        data/example_data.csv
 cd.model_path                       data/dr_model.bin
 cd.mapping_path                     data/dr_mapping.txt
-cd.thread_number                    8
+cd.thread_number                    0
 cd.train_batch_size                 8192
 cd.eval_batch_size                  8192
 cd.num_layer                        3
