--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,4 +45,4 @@ jobs:
           key: ${{ runner.os }}-sbt-cache-v2-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('project/build.properties') }}
 
       - name: Build project
-        run: sbt -mem 4096 ++${{ matrix.scala }} "testOnly *ClusterTreeSpec*"
+        run: sbt -mem 4096 ++${{ matrix.scala }} "testOnly *Softmax*"
